# stellar

./: .env.example  .gitignore  BUILD.md  CONTEXT.md  GEMINI.md  ITERATE.md  PRD.md  README.md  level.md  package-lock.json  stellar-build.md  wrangler.jsonc
.github/workflows/: ci.yml
contract/: Cargo.toml  admin.json  token.json
contract/src/: events.rs  lib.rs  test.rs  types.rs
docs/: architecture.md  branding.md  build.md  context.md  product_requirements.md  security-checklist.md  user-guide.md
frontend/: .env.example  eslint.config.js  index.html  init_contract.mjs  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: manifest.json  robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActiveEscrowCard.tsx  ActivityLedger.tsx  AddressInput.tsx  AdminGuard.tsx  CreateEscrowForm.tsx  EscrowCard.tsx  Layout.tsx  Logo.tsx  QuickGuide.tsx  StatusBadge.tsx  TransactionToast.tsx  WalletButton.tsx
frontend/src/hooks/: useActivity.ts  useAdmin.ts  useEscrow.ts  useOnboarding.ts  useOnboarding.tsx  useStellar.tsx
frontend/src/lib/: contract.ts  indexer.ts  rpc.ts  sponsor.ts  stellar.ts
frontend/src/pages/: AdminLogin.tsx  Arbitrator.tsx  Candidate.tsx  Dashboard.tsx  Employer.tsx  Metrics.tsx  Onboarding.tsx
scripts/: init_contract.mjs
