[package]
name = "stella"
version = "1.0.0"
edition = "2021"
description = "Soroban-powered pre-employment onboarding escrow on Stellar"
license = "MIT"

[lib]
crate-type = ["rlib"]
# NOTE: If `cargo test` fails on Windows GNU with "export ordinal too large",
# temporarily change crate-type to ["rlib"] for testing, then restore for WASM build.

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
